# SegviGen-gradio

./: .gitignore  README.md  app.py  guidance_map.py  inference.py  pyproject.toml  server.py  util.py
frontend/src/components/tabs/: Full2DTab.js  Full2DTab.tsx  FullTab.js  FullTab.tsx  InteractiveTab.js  InteractiveTab.tsx
segvigen/: __init__.py  _samplers.py  _shared.py  full.py  full_guided.py  interactive.py
static/: index.html
static/assets/: index-D5MD-PMD.js
static/css/: app.css
static/js/: app.js
