[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "segvigen"
version = "0.1.0"
description = "3D mesh part segmentation using SegviGen flow-matching models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.0",
    "numpy",
    "trimesh[easy]",
    "Pillow",
    "tqdm",
    "huggingface-hub",
]

[project.optional-dependencies]
# Install with: pip install segvigen[dev]
dev = ["uvicorn", "fastapi", "pydantic"]

[project.urls]
Homepage = "https://github.com/maepopi/SegviGen-app"
Repository = "https://github.com/maepopi/SegviGen-app"

[tool.setuptools.packages.find]
where = ["."]
include = ["segvigen*"]

[tool.setuptools.package-data]
# Exclude checkpoint files — they are downloaded at runtime from HuggingFace.
segvigen = ["py.typed"]

[tool.setuptools.exclude-package-data]
segvigen = ["ckpt/*.ckpt"]
